# rust-api-client

./: Cargo.toml  README.md
src/: client.rs  lib.rs
src/models/: dedicated.rs  firewall.rs  mod.rs  shared.rs  user.rs  vps.rs
src/services/: dedicated.rs  firewall.rs  mod.rs  user.rs  vps.rs
